# RP_project

./: map.yaml
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin
logs/project_localizer/: build.check.012.log.stderr  build.check.014.log.stderr  build.check.018.log.stderr  build.check.023.log.stderr  build.check.090.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.009.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.030.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.040.log.stderr  build.make.041.log.stderr  build.make.042.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr  build.make.049.log.stderr  build.make.050.log.stderr  build.make.058.log.stderr  build.make.059.log.stderr  build.make.063.log.stderr  build.make.065.log.stderr  build.make.067.log.stderr  build.make.069.log.stderr  build.make.070.log.stderr  (+150 more)
src/project_localizer/: CMakeLists.txt
src/solution/: CMakeLists.txt
src/solution/src/: localizer2d.cpp
(+41 files in other folders)
